--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}      
           overwrite: true 
           source: "src"
-          target: "~/test-ira-agency"
+          target: "/var/www/test-ira-agency"
       
       - name: SSH actions
         uses: appleboy/ssh-action@v1.2.2
@@ -84,10 +84,10 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             # Copy
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S rsync -l -r test-ira-agency/ /var/www/test-ira-agency/
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S rm -rf test-ira-agency
+            # echo ${{secrets.SERVER_PASSWORD}} | sudo -S rsync -l -r test-ira-agency/ /var/www/test-ira-agency/
+            # echo ${{secrets.SERVER_PASSWORD}} | sudo -S rm -rf test-ira-agency
             echo ${{secrets.SERVER_PASSWROD}} | sudo -S chown -R ${{secrets.SERVER_USERNAME}}:${{secrets.SERVER_USERNAME}} /var/www/test-ira-agency
-            cd /var/www/test-ira-agency
+            cd /var/www/test-ira-agency/
             # directory permission
             echo ${{secrets.SERVER_PASSWROD}} | sudo -S chmod -R 775 storage
             echo ${{secrets.SERVER_PASSWROD}} | sudo -S chmod -R 775 bootstrap/cache
@@ -98,7 +98,6 @@ jobs:
             echo ${{secrets.SERVER_PASSWORD}} | sudo -S php artisan config:clear
             echo ${{secrets.SERVER_PASSWORD}} | sudo -S php artisan cache:clear
             echo ${{secrets.SERVER_PASSWORD}} | sudo -S php artisan optimize
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S php artisan app:init-default-thumbnail
             # supervisor
             echo ${{secrets.SERVER_PASSWORD}} | sudo -S supervisorctl reread
             echo ${{secrets.SERVER_PASSWORD}} | sudo -S supervisorctl update
