chnage deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}      
           overwrite: true 
           source: "src"
-          target: "/var/www/test-ira-agency"
+          target: "~/test-ira-agency"
       
       - name: SSH actions
         uses: appleboy/ssh-action@v1.2.2
@@ -84,8 +84,8 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             # Copy
-            # echo ${{secrets.SERVER_PASSWORD}} | sudo -S rsync -l -r test-ira-agency/ /var/www/test-ira-agency/
-            # echo ${{secrets.SERVER_PASSWORD}} | sudo -S rm -rf test-ira-agency
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S rsync -l -r ~/test-ira-agency/src /var/www/test-ira-agency/
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S rm -rf test-ira-agency
             echo ${{secrets.SERVER_PASSWROD}} | sudo -S chown -R ${{secrets.SERVER_USERNAME}}:${{secrets.SERVER_USERNAME}} /var/www/test-ira-agency
             cd /var/www/test-ira-agency/
             # directory permission
